package br.com.bytewizards.api.repository;

import br.com.bytewizards.api.entity.AlimentoEntity;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface AlimentoRepository extends JpaRepository<AlimentoEntity, Long> {


}
